Revision history for Perl extension Wx.

0.81
	- Almost completed the interface of wxStyledTextCtrl.
	- Added wxBitmapToggleButton and wxSVGFileDC (2.9).
	- Added wxWrapSizer (2.9).
	- Added wxMirrorDC and wxDCClipper.

0.80  Tue Nov  6 23:12:53 CET 2007
	- Build fixes for Windows (both dmake and nmake).
	- Prototype implementation of wxVariant and wxDataViewCtrl (2.9).

0.79  Thu Oct 18 00:52:35 CEST 2007
	- Windows compilation fixes (thanks to John Kizlyk for the report).
	- Try to handle gracefully the absence of Alien::wxWidgets under
	  Mac OS X.
	- Added Alien::wxWidgets to configure_requires.

0.78  Mon Oct 15 23:54:13 CEST 2007
	- Added wxRichTextBuffer and wxRichTextFileHandler,
	  wxRichTextHTMLHandler, wxRichTextXMLHandler (2.7).
	- Added wxSymbolPickerDialog (2.7).
	- Added wxDisplay, wxGenericDirCtrl.
	- Added wxFileCtrl (2.9).
	- Added wxStandardPaths (2.6).
	- Wrapped the remaining wxGraphics* classes (2.7).

0.77  Thu Aug 23 21:59:25 CEST 2007
	- Added wxGraphicsContext (2.7) and some related classes
	  (patch by Klaas Hartmann).
	- Added wxCollapsiblePane (2.7).
	- Added wxBitmapComboBox (2.7).
	- Added wxAnimation and wxAnimationCtrl (2.7).
	- Added wxPropertySheetDialog (2.6).
	- Added wxPasswordEntryDialog (2.6).
	- Added wxCommand and wxCommandProcessor.
	- Added wxHScrolledWindow and wxHVScrolledWindow and
	  made wx[HV]ScrolledWindow subclassable from Perl.

0.76  Thu Aug 16 00:21:00 CEST 2007
	- Added wxEditableListBox (2.9).
	- Added wxSearchCtrl (2.8).
	- Added wxComboCtrl and wxOwnerDrawnComboBox (2.7).
	- Added EVT_HTML_XXX event handlers.

0.75  Sun Jul  8 22:43:41 CEST 2007
	- wxWidgets 2.9.x compatibility.
	- Changed wxInputStream::READLINE to always return bytes.

0.74  Sun Apr 29 00:53:23 CEST 2007
	- Minor compilation and runtime fixes.

0.73  Tue Apr 17 22:49:32 CEST 2007
	- wxWidgets 2.9.x compatibility.

0.72  Sun Apr  1 00:33:54 CEST 2007
	- Compilation fixes for GCC 3.4.
	- Compilation fixes for wxMotif/wxWidgets 2.6.3.
