@@ -110,6 +110,8 @@ wxPopupTransientWindow * O_WXOBJECT
 wxPlPopupTransientWindow * O_WXOBJECT
 wxDisplay *             O_NON_WXOBJECT
 wxVideoMode *           O_NON_WXOBJECT
+wxEventBlocker *        O_NON_WXOBJECT
+wxWindowUpdateLocker *  O_NON_WXOBJECT
 
 wxMenuBar *             O_WXOBJECT
 wxMenu *                O_WXOBJECT
@@ -250,6 +252,7 @@ wxSVGFileDC *           O_WXOBJECT_THR
 wxDCClipper *           O_NON_WXOBJECT
 
 wxTaskBarIcon *         O_WXOBJECT
+wxNotificationMessage * O_WXOBJECT
 
 wxTextAttr *            O_NON_WXOBJECT_THR
 
