@@ -4,6 +4,7 @@ Revision history for Perl extension Wx.
 	- Almost completed the interface of wxStyledTextCtrl.
 	- Added wxBitmapToggleButton and wxSVGFileDC (2.9).
 	- Added wxWrapSizer (2.9).
+	- Added wxNotificationMessage (2.9).
 	- Added wxMirrorDC and wxDCClipper.
 
 0.80  Tue Nov  6 23:12:53 CET 2007
